--- a/config.json
+++ b/config.json
@@ -35,8 +35,8 @@
     "ignoreCommand": []
   },
   "adminBot": [
-    "61564523816700",
-    "61565025325331",
+    "100085457504731",
+    "61552209843370",
     "100076969407340"
   ],
   "whiteListMode": {
@@ -48,8 +48,8 @@
     ],
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
-  "nickNameBot": "Ar Yan🍫",
-  "prefix": "*",
+  "nickNameBot": "MR-Rimon",
+  "prefix": "-",
   "xnil": "",
   "api": "",
   "api2": "",
